str-hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: str-hello
  name: str-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: str-hello
  template:
    metadata:
      labels:
        app: str-hello
    spec:
      imagePullSecrets:
      - name: complex-store-docker-hub-secret
      containers:
      - image: ausername123/str:0.0.1 # {"$imagepolicy": "default:hello"}
        name: str
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 80
        livenessProbe:
          initialDelaySeconds: 120
          periodSeconds: 15
          httpGet:
            path: /actuator/health/liveness
            port: 8080
        readinessProbe:
          initialDelaySeconds: 120
          periodSeconds: 15
          httpGet:
            port: 8080
            path: /actuator/health/readiness
