str-hello/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: str-hello
  name: str-hello
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: str-hello
