str-hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: str-hello
  name: single-default-backend-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: str-hello
      port:
        number: 80
